Bug 1864378 - correct pathSeg traversal for bezier curves r=boris

Differential Revision: https://phabricator.services.mozilla.com/D193607